--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
 <body>
   <h1>World Clock</h1>
+  <footer>
+    <p>
+      This world clock project, created by Rima, is <a href="https://github.com/RimaGai/world-clock"
+        target="_blank">open-sourced on Github</a> and hosted on <a href="https://jocular-bombolone-4eac0c.netlify.app/"
+        target="_blank">Netlify</a></p>
+  </footer>
   <script src="src/index.js"></script>
 </body>
 
