Added basic HTML structure

--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
 </head>
 
 <body>
-  <h1>World Clock</h1>
+  <div>
+    <h1>World Clock</h1>
+    <select name="" id="">
+      <option value="">Choose your city</option>
+      <option value="">Oslo</option>
+      <option value="">Paris</option>
+      <option value="">Rome</option>
+      <option value="">Sydney</option>
+    </select>
+    <div class="city">
+      <h2>Paris</h2>
+      <div class="date">Fake date</div>
+      <div class="time">Fake time</div>
+    </div>
+  </div>
   <footer>
     <p>
       This world clock project, created by Rima, is <a href="https://github.com/RimaGai/world-clock"
