--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.6.0/moment-timezone-with-data-1970-2030.min.js"></script>
   <link rel="stylesheet" href="src/style.css">
   <title>World Clock</title>
 </head>
@@ -15,14 +18,27 @@
       <option value="">Choose your city</option>
       <option value="">Oslo</option>
       <option value="">Paris</option>
-      <option value="">Rome</option>
       <option value="">Sydney</option>
+      <option value="">Tokyo</option>
     </select>
-    <div class="city">
-      <h2>Paris</h2>
+    <div class="container">
+      <div class="city" id="paris">
+        <h2>Paris</h2>
+        <div class="date">Fake date</div>
+        <div class="time">Fake time</div>
+      </div>
+    </div>
+    <div class="city" id="sydney">
+      <h2>Sydney</h2>
       <div class="date">Fake date</div>
       <div class="time">Fake time</div>
     </div>
+    <div class="city" id="tokyo">
+      <h2>Tokyo</h2>
+      <div class="date">Fake date</div>
+      <div class="time">Fake time</div>
+    </div>
+  </div>
   </div>
   <footer>
     <p>
