--- a/index.html
+++ b/index.html
@@ -14,31 +14,31 @@
 <body>
   <div>
     <h1>World Clock</h1>
-    <select name="" id="">
+    <select id="city-select">
       <option value="">Choose your city</option>
-      <option value="">Oslo</option>
-      <option value="">Paris</option>
-      <option value="">Sydney</option>
-      <option value="">Tokyo</option>
+      <option value="paris">Paris</option>
+      <option value="sydney">Sydney</option>
+      <option value="tokyo">Tokyo</option>
     </select>
     <div class="container">
       <div class="city" id="paris">
         <h2>Paris</h2>
-        <div class="date">Fake date</div>
-        <div class="time">Fake time</div>
+        <div class="date"></div>
+        <div class="time"></div>
+      </div>
+      <div class="city" id="sydney">
+        <h2>Sydney</h2>
+        <div class="date"></div>
+        <div class="time"></div>
+      </div>
+      <div class="city" id="tokyo">
+        <h2>Tokyo</h2>
+        <div class="date"></div>
+        <div class="time"></div>
       </div>
     </div>
-    <div class="city" id="sydney">
-      <h2>Sydney</h2>
-      <div class="date">Fake date</div>
-      <div class="time">Fake time</div>
+    <div id="cities">
     </div>
-    <div class="city" id="tokyo">
-      <h2>Tokyo</h2>
-      <div class="date">Fake date</div>
-      <div class="time">Fake time</div>
-    </div>
-  </div>
   </div>
   <footer>
     <p>
