Add current location time

--- a/index.html
+++ b/index.html
@@ -12,15 +12,18 @@
 </head>
 
 <body>
-  <div>
+  <div class="container">
     <h1>World Clock</h1>
-    <select id="city-select">
+    <select id="city">
       <option value="">Choose your city</option>
-      <option value="paris">Paris</option>
-      <option value="sydney">Sydney</option>
-      <option value="tokyo">Tokyo</option>
+      <option value="current">Current location</option>
+      <option value="Europe/Paris">Paris</option>
+      <option value="Australia/Sydney">Sydney</option>
+      <option value="Asia/Tokyo">Tokyo</option>
     </select>
-    <div class="container">
+    <div id="cities">
+      <div class="city" id="current">
+      </div>
       <div class="city" id="paris">
         <h2>Paris</h2>
         <div class="date"></div>
@@ -37,8 +40,8 @@
         <div class="time"></div>
       </div>
     </div>
-    <div id="cities">
-    </div>
+  </div>
+  <div id="selectedCity">
   </div>
   <footer>
     <p>
