--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="container">
-    <h1>World Clock</h1>
+    <h1><a href="/">World Clock</a></h1>
     <select id="city">
       <option value="">Choose your city</option>
       <option value="current">Current location</option>
