--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
       </div>
     </div>
   </div>
-  <div id="selectedCity">
-  </div>
+  <div id="selectedCity"></div>
   <footer>
     <p>
       This world clock project, created by Rima, is <a href="https://github.com/RimaGai/world-clock"
