Change displayed cities for better variation

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <option value="">Choose your city</option>
       <option value="current">Current location</option>
       <option value="Europe/Paris">Paris</option>
-      <option value="Australia/Sydney">Sydney</option>
-      <option value="Asia/Tokyo">Tokyo</option>
+      <option value="America/Los_Angeles">Los Angeles</option>
+      <option value="Pacific/Honolulu">Honolulu</option>
     </select>
     <div id="cities">
       <div class="city" id="current">
@@ -29,13 +29,13 @@
         <div class="date"></div>
         <div class="time"></div>
       </div>
-      <div class="city" id="sydney">
-        <h2>Sydney</h2>
+      <div class="city" id="losangeles">
+        <h2>Los Angeles</h2>
         <div class="date"></div>
         <div class="time"></div>
       </div>
-      <div class="city" id="tokyo">
-        <h2>Tokyo</h2>
+      <div id="honolulu" class="city">
+        <h2>Honolulu</h2>
         <div class="date"></div>
         <div class="time"></div>
       </div>
